# eltex_seabattle

./: .gitignore  Makefile.in  README  config.h  config.h.in  configure  configure.ac
src/: Cell.c  Cell.h  Config.c  Config.h  Field.c  Field.h  Fitting_ship.c  Fitting_ship.h  Makefile.am  Makefile.in  Player.c  Player.h  Ship.c  Ship.h  UI.h  cell.h  check_winner.c  create_player.c  create_players.c  create_window.c  draw_box.c  draw_frame.c  draw_frame_around_cell.c  emplace_ships.c  field.h  finalize_field.c  generate_ships_numbers_per_rank.c  input_name.c  main.c  player.h  print_emplacing.c  print_enemy.c  print_field.c  print_fields.c  print_friendly.c  print_winner.c  read_coords.c  run_game.c  seabattle_errors.h  seabattle_utils.h  (+2 more)
