bin_PROGRAMS = seabattle
seabattle_SOURCES = main.c \
		    print_enemy.c \
		    print_friendly.c \
		    read_coords.c \
		    print_field.c \
		    print_emplacing.c \
		    Fitting_ship.c \
		    Ship.c \
		    Cell.c


seabattle_LDFLAGS = -lncurses

AM_CFLAGS = -Wall -pedantic
seabattle_CFLAGS = $(AM_CFLAGS)
