bin_PROGRAMS = seabattle
seabattle_SOURCES = main.c \
		    print_enemy.c \
		    print_friendly.c \
		    read_coords.c \
		    print_field.c \
		    Cell.c \
		    Cell.h \
		    check_winner.c \
		    Config.c \
		    Config.h \
		    create_player.c \
		    create_players.c \
		    emplace_ships.c \
		    Field.c \
		    Field.h \
		    finalize_field.c \
		    Fitting_ship.c \
		    Fitting_ship.h \
		    Player.c \
		    Player.h \
		    run_game.c \
		    seabattle_utils.h \
		    Ship.c \
		    Ship.h \
		    shot.c \
		    UI.h \
		    input_name.c
seabattle_LDFLAGS = -lncurses

AM_CFLAGS = -Wall -pedantic
seabattle_CFLAGS = $(AM_CFLAGS)
